fix: tests added, controllers fixed