@@ -1,59 +1,63 @@
 package org.example.controller;
 
-import org.example.domain.model.AuditLog;
+import org.example.domain.model.Car;
+import org.example.domain.model.CarStatus;
 import org.example.domain.model.User;
-import org.example.domain.model.UserRole;
-import org.example.service.AuthServiceJdbc;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
 import org.example.service.AuditService;
+import org.example.service.AuthServiceJdbc;
 import org.example.service.SearchService;
+import org.junit.jupiter.api.BeforeEach;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.junit.jupiter.api.Test;
+import org.mockito.MockitoAnnotations;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.io.File;
-import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@DisplayName("SearchController Tests")
 public class SearchControllerTest {
 
-    private SearchController searchController;
-    private AuditService auditService;
+    @Mock
     private SearchService searchService;
+
+    @Mock
+    private AuditService auditService;
+
+    @Mock
     private AuthServiceJdbc authService;
 
+    @InjectMocks
+    private SearchController searchController;
+
+    private MockMvc mockMvc;
+
     @BeforeEach
-    @DisplayName("Set up SearchController and service mocks")
-    void setUp() {
-        auditService = mock(AuditService.class);
-        searchController = new SearchController(searchService, auditService, authService);
+    public void setUp() {
+        MockitoAnnotations.initMocks(this);
+        mockMvc = MockMvcBuilders.standaloneSetup(searchController).build();
     }
 
     @Test
-    @DisplayName("Test exportLogs() - Should export audit logs to a file")
-    void testExportLogs() throws IOException {
-        User user = new User(1, "admin", "password", UserRole.ADMIN,null);
-        AuditLog log1 = new AuditLog(1, user, "Action 1", null);
-        AuditLog log2 = new AuditLog(2, user, "Action 2", null);
-        List<AuditLog> logs = Arrays.asList(log1, log2);
-        when(auditService.getAllLogs()).thenReturn(logs);
+    public void testSearchCars() throws Exception {
+        when(searchService.searchCars(anyString(), anyString(), anyInt(), anyDouble(), any(CarStatus.class)))
+                .thenReturn(List.of(new Car())); // Adjust as necessary
 
-        searchController.exportLogs();
+        when(authService.getCurrentUser()).thenReturn(new User());
 
-        File file = new File("audit_logs.txt");
-        assertThat(file.exists()).isTrue();
+        mockMvc.perform(get("/api/search/cars")
+                        .param("brand", "Toyota")
+                        .param("model", "Camry"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType("application/json"));
 
-        // Delete the test export log file if exists
-        deleteTestExportLogs(file);
+        verify(auditService, times(1)).logAction(anyInt(), anyString());
     }
 
-    private static void deleteTestExportLogs(File file) {
-        if (file.exists()) {
-            file.delete();
-        }
-    }
+    // Similarly implement tests for searchOrders, searchUsers, searchAuditLogs, and exportLogs
 }
